assets/kubernetes/aws/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-cart
  namespace: wk-az # Destination Namespace
  labels:
    app: allow-gateway-to-cart
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: test-a # Source Namespace (where Route is)
  to:
    - group: "" # Core API Group
      kind: Service
