assets/kubernetes/aws/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app-name go-cart
  namespace: test-a
  labels:
    app: *app-name
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: *app-name
  template:
    metadata:
      labels:
        app: *app-name
    spec:
      serviceAccountName: sa-go-cart
      volumes:
      - name: volume-secret
        secret:
          secretName: es-rds-arch-secret-go-cart
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 3000
      containers:
      - name: *app-name
        image: 992382474575.dkr.ecr.us-east-2.amazonaws.com/go-cart:latest
        volumeMounts:
          - mountPath: "/var/pod/secret"
            name: volume-secret
            readOnly: true
        resources:
           requests:
             cpu: 100m
             memory: 100Mi
           limits:
             cpu: 400m
             memory: 200Mi
        securityContext:
          seccompProfile:
            type: RuntimeDefault
          runAsNonRoot: true
          runAsUser: 1100
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - name: http
          containerPort: 7001
          protocol: TCP
        readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 30
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 30
        livenessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - "ps -A | grep go-cart | grep -v grep"
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","sleep 5"]
      terminationGracePeriodSeconds: 60
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                  - key: karpenter.k8s.aws/instance-family
                    operator: In
                    values:
                      - t3
                      - t3a
                  - key: karpenter.sh/capacity-type
                    operator: In
                    values:
                      - spot
                      - on-demand
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: *app-name
          matchLabelKeys:
          - pod-template-hash 
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: *app-name
          matchLabelKeys:
          - pod-template-hash
