assets/kubernetes/aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-go-cart
  namespace: test-a
  labels:
    app: svc-go-cart
spec:
  type: ClusterIP
  ports:
  - port: 7001
    targetPort: 7001
    protocol: TCP
    name: http
  selector:
    app: go-cart
