assets/kubernetes/aws/alb-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-cart-route
  namespace: test-a
  labels:
    app: go-cart-route
spec:
  hostnames:
    - "go-cart.architecturedev.caradhras.io"
  parentRefs:
    - name: alb-arch-eks-002-gateway
      namespace: test-a
      sectionName: http-listener
    - name: alb-arch-eks-002-gateway
      namespace: test-a
      sectionName: https-listener
  rules:
    - matches:
      - path:
            type: PathPrefix
            value: /
        headers:
        - name: x-env
          value: aws
      backendRefs:
        - name: svc-go-cart
          port: 7001
          namespace: test-a
    - matches:
      - path:
            type: PathPrefix
            value: /
        headers:
        - name: x-env
          value: azure
      backendRefs:
        - name: svc-go-cart
          port: 7001
          namespace: wk-az
